# smallpt-mlt

./: .clang-format  CMakeLists.txt  README.md  format.sh  main.cpp
.github/workflows/: build_and_render.yml
src/: kelement_mlt.h  main.cpp  pss_mlt_sampler.h  sampler.h  vec3.h
